--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,11 @@
 .fa-row {
    background-color: var(--dominantColor) !important;
    padding: 35px;
+   color: #ffffff;
 }
+
 
 .fa-row-icon {
    font-size: 60px;
+   color: #ffffffff;
 }
