--- a/css/styles.css
+++ b/css/styles.css
@@ -26,5 +26,9 @@
    font-size: 16px;
    padding: 20px;
    height: auto;
-   
+   margin-top: 20px;
+   margin-bottom: 18px;
+   font-family: "Montserrat", serif;
+   margin-left: auto;
+   margin-right: auto;
 }
