--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@
  }
  
  .content-table tbody tr td:first-of-type {
-   background-color: #ffffff;
+  background-color: #ffffff;
    text-align: right;
    border-right: 1px solid #dddddd;
  }
@@ -80,4 +80,8 @@
   background-color: #f6fafa;
   padding-top: 30px;
   padding-bottom: 30px;
+ }
+
+ .schedule-section {
+  width: 100%;
  }
