--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,13 @@
   padding-bottom: 30px;
  }
 
- .schedule-section {
+
+
+ @media screen and (max-width:768px) {
+ 
+  .schedule-section {
   width: 100%;
+  display: none;
+ }
+
  }
