--- a/css/styles.css
+++ b/css/styles.css
@@ -86,9 +86,8 @@
 
  @media screen and (max-width:768px) {
  
-  .schedule-section {
+  .first-paragraph-img {
   width: 100%;
-  display: none;
  }
 
  }
