--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,6 @@ h6 {
     color: var(--dominantColor) !important;
 }
 
-
 .navbar {
     background-color: var(--secondaryColor) !important;
 }
@@ -28,4 +27,22 @@ h6 {
 .nav-link:hover {
     text-decoration: underline;
     text-decoration-thickness: 3px;
+}
+
+.footer-row {
+    background-color: var(--dominantColor) !important;
+    padding-top: 35px;
+    padding-bottom: 35px;
+}
+
+.footer-row a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.fa-social-media,
+.fa-social-media a {
+    font-size: 25px !important;
+    padding-left: 12px;
+    padding-right: 12px;
 }
