--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 }
 
 .fa-row-icon {
-  font-size: 60px;
+  font-size: 70px;
   color: #ffffffff;
 }
 
@@ -17,7 +17,7 @@
   transform: scale(1.1);
 }
 
-.first-pragraph-div {
+.first-paragraph-div {
   position: relative;
   background-color: #ffffff;
   color: #000000;
